--- a/vllm_prediction.ipynb
+++ b/vllm_prediction.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyPTIGEaL+Lp/qaOCcKuCyNp",
+      "authorship_tag": "ABX9TyPRt2BnbI4TL3QBO/cyFkds",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -772,16 +772,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "## Based ONLY on the following behavioral health summary,\n",
-        "## classify burnout category emotional exhaustion as either:"
-      ],
-      "metadata": {
-        "id": "ZRPZrMgQ126-"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "def build_classification_prompt(summary):\n",
@@ -1015,6 +1005,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Squential Processing**"
+      ],
+      "metadata": {
+        "id": "vfIN7dCm3ogy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Classification\n",
@@ -1052,6 +1051,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Batch Processing**"
+      ],
+      "metadata": {
+        "id": "Oyd9AE203wK5"
+      }
     },
     {
       "cell_type": "code",
