--- a/vllm_prediction.ipynb
+++ b/vllm_prediction.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyPRt2BnbI4TL3QBO/cyFkds",
+      "authorship_tag": "ABX9TyPZuhOO1GYcJ6A9HaojMobu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1091,7 +1091,7 @@
         "        print(f\"Error processing {item['ID']}: {e}\")\n",
         "        return None\n",
         "\n",
-        "# Adjust max_workers based on GPU capacity, 8 is usually safe for Colab T4/L4\n",
+        "# Adjust max_workers based on GPU capacity, I use L4 GPU.\n",
         "with concurrent.futures.ThreadPoolExecutor(max_workers=8) as executor:\n",
         "    futures = [executor.submit(classify_participant, item) for item in summary_results]\n",
         "\n",
@@ -1103,10 +1103,7 @@
         "        if (i + 1) % 5 == 0:\n",
         "            print(f\"Completed {i+1}/{len(summary_results)}...\")\n",
         "\n",
-        "print(f\"Finished. Total classified: {len(classification_results)}\")\n",
-        "\n",
-        "# Update the global results variable for the next cell\n",
-        "results = classification_results"
+        "print(f\"Finished. Total classified: {len(classification_results)}\")"
       ],
       "metadata": {
         "colab": {
